fixed overlapping

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -9,7 +9,7 @@
   color: white;
 }
 
-.Levels-button:hover {
+.Levels-button:hover, .Levels-button:focus, .Levels-button:active {
   -moz-box-shadow: 0px 0px 100px #ff99cc;
   -webkit-box-shadow: 0px 0px 100px #ff99cc;
   box-shadow: 0px 0px 100px #ff99cc;
@@ -46,8 +46,8 @@ footer a:hover, footer a:focus {
 }
 
 .btn:focus, .btn:active:focus, .btn.active:focus {
-    outline: 0 none;
-     background: #4d004d;
+  outline: 0 none;
+  background: #4d004d;
 } 
 .btn-primary {
   background: purple;
@@ -79,11 +79,15 @@ footer a:hover, footer a:focus {
    display: none;
 }
 
+.btn-group-vertical {
+   padding-bottom: 1.5em;
+}
+
 .Scoreboard {
   position: absolute;
   left: 50%;
   top: 10em;
-  height: 30em;
+  min-height: 30em;
   width: 30em;
   margin-left: -15em;
   box-sizing: border-box;
@@ -200,13 +204,9 @@ footer a:hover, footer a:focus {
 
    .Scoreboard {
       left: 16.6em;
-      height: 28em;
+      min-height: 28em;
       width: 25em;
    }
-
-   .btn-group-vertical {
-    padding-bottom: 1em;
-  }
 }
 
 /**
